add location manager

--- a/GPSCatcher/res/values/strings.xml
+++ b/GPSCatcher/res/values/strings.xml
@@ -16,7 +16,8 @@
     <string name="portNum">Port Number</string>
     <string name="defaultIP">192.168.0.1</string>
     <string name="defaultPort">12345</string>
-    <string name="dbcheck">Check GPS Locations</string>
+    <string name="gpscheck">Check GPS Locations</string>
+    <string name="phonecheck">Check Phone Locations</string>
     <string name="chase">Chase</string>
     
 </resources>
