--- a/GPSCatcher/res/values/strings.xml
+++ b/GPSCatcher/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="refresh">Stop</string>
     <string name="phone">Phone</string>
     <string name="arduino">Arduino</string>
+    <string name="ok">OK</string>
     
 </resources>
