Altered menu appearance

--- a/GPSCatcher/res/values/strings.xml
+++ b/GPSCatcher/res/values/strings.xml
@@ -6,17 +6,17 @@
     <string name="quit">Quit</string>
     <string name="menu">Choose a function:</string>
     <string name="view">View Map</string>
-    <string name="change">Update Frequency</string>
+    <string name="change">Check Frequency</string>
     <string name="change_explanation">Input </string>
-    <string name="num_directions">Insert the number of directions to retrieve at a time</string>
-    <string name="change_freq">Insert the number of milliseconds to wait between each batch of instructions</string>
-    <string name="submit">Submit</string>
+    <string name="settings">Frequency Settings</string>
+    <string name="change_freq">Number of seconds between GPS location retrieval:</string>
+    <string name="back">Back</string>
     <string name="login">Log In</string>
     <string name="ipAddr">IP Address</string>
     <string name="portNum">Port Number</string>
     <string name="defaultIP">192.168.0.1</string>
     <string name="defaultPort">12345</string>
-    <string name="gpscheck">Check GPS Locations</string>
+    <string name="gpscheck">Check Arduino Locations</string>
     <string name="phonecheck">Check Phone Locations</string>
     <string name="chase">Chase</string>
     <string name="navito">Navi To</string>
